# talquen

./: .gitignore  @banner.js  HYBRID.md  LICENSE  README.md  conditiondeploy.js  config.js  detect.js  fingering.js  fonts.js  hybrid.js  idle.js  index.js  manualdeploy.js  package.json  pm.js
container/: package.json
container/Base/: Docker.properties  Docker.sh  Dockerfile
container/Camoufox/: Docker.sh  Dockerfile
container/Camoufox/talquen/: camoufoxserver.py  interval.py  launcher.py  pyproject.toml  talquen.py  talquen.sh
pod/: @banner.js  Dockerfile  package.json  server.js  starter.sh  toargs.js
test/: index.js
